2014-07-27  Bruno de Oliveira Abinader  <bruno.d@partner.samsung.com>

        Support for :enabled selector on Anchor & Area elements
        https://bugs.webkit.org/show_bug.cgi?id=134826

        Reviewed by Darin Adler.

        Updates the PseudoClassEnabled selector checker to check for Anchor & Area
        elements with a 'href' attribute.

        Spec: http://html.spec.whatwg.org/#selector-enabled

        Test: fast/css/css-selector-enabled-links.html

        * css/SelectorCheckerTestFunctions.h:
        (WebCore::isEnabled): Added check for anchor & area elements.

2014-07-27  Daniel Bates  <dabates@apple.com>

        [WK2] Crash when accessing window.localStorage after calling window.close()
        https://bugs.webkit.org/show_bug.cgi?id=135328
        <rdar://problem/17315237>

        Reviewed by Sam Weinig.

        Fixes an issue where accessing local storage for the first time after calling window.close()
        causes a crash.

        For now, we should disallow accessing local storage after calling window.close() regardless of
        whether it's the first access to local storage as this seems like a bad idiom to support. Note,
        this represents a change in behavior from WebKit1. If such usage of window.localStorage turns
        out to be reasonable then we can visit this decision again in <https://bugs.webkit.org/show_bug.cgi?id=135330>.

        Tests: storage/domstorage/localstorage/access-storage-after-window-close.html
               storage/domstorage/localstorage/access-storage-then-set-value-in-storage-after-window-close.html
               storage/domstorage/localstorage/set-value-in-storage-after-window-close.html

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::localStorage): Modified to only return the cached local storage or
        create a new local storage so long as the page isn't being closed. Also, substitute nullptr
        for 0.