@@ -1,3 +1,14 @@
+2014-07-27  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        Remove GraphicsSurfaceGLX.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=135279
+
+        Reviewed by Darin Adler.
+
+        GraphicsSurfaceGLX.cpp is not used since Qt dropped and Efl port changed at r146458
+
+        * platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp: Removed.
+
 2014-07-27  Bruno de Oliveira Abinader  <bruno.d@partner.samsung.com>
 
         Support for :enabled selector on Anchor & Area elements
